Russian Localisation for 1.10.1

--- a/localisation/russian/0_energy_l_russian.yml
+++ b/localisation/russian/0_energy_l_russian.yml
@@ -14,6 +14,7 @@
  limited_to_heu_materials_only: "Ограниченное использование материалов НОУ"
  ignored_our_request_to_cease: "Игнорирование нашего требования о прекращении"
  HEADER_TEXT_TITLE: "§YЭНЕРГИЯ§!"
+ CAT_nuclear: "Ядерный"
 
 # Ideas
  energy_dynamic_modifier: "Национальная электрическая сеть"
@@ -49,56 +50,56 @@
  building_fossil_fuel_powerplant_tt: "Электростанция на ископаемом топливе будет построена примерно за 90 дней"
 
  # Techs
- early_renewables: "Ранние фотоэлектрические панели/ветряные турбины"
- early_renewables_desc: "The development of basic solar panels allows nations to harness sunlight and convert it into electricity, marking the initial step towards renewable energy adoption."
- renewables: "Эксперименты с тепловой концентрацией/прибрежным ветром"
- renewables_desc: "Technological improvements in aerodynamics and materials enable the construction of more efficient wind turbines, increasing their power generation capabilities."
- improved_renewables: "Тонкопленочные солнечные панели/крупномасштабные турбины"
- improved_renewables_desc: "Significant advancements in photovoltaic cell technology result in higher solar energy conversion rates, making solar panels more productive and cost-effective."
- advanced_renewables: "Крупномасштабная концентрация солнечной энергии/внебереговые ветряные парки"
- advanced_renewables_desc: "Utilizing lightweight yet sturdy composite materials, wind turbine blades become more efficient and durable, capturing more energy from the wind."
- modern_renewables: "Эксперименты по сверхпроводимости"
- modern_renewables_desc: "The introduction of thin-film solar panels revolutionizes the solar industry, offering flexibility and adaptability in installation while improving overall efficiency."
- improved_modern_renewables: "Улучшенная сверхпроводимость"
- improved_modern_renewables_desc: "Nations begin constructing wind farms in offshore locations, benefiting from stronger and more constant winds, paving the way for large-scale wind energy projects."
- advanced_modern_renewables: "Усовершенствованная сверхпроводимость"
- advanced_modern_renewables_desc: "Bifacial solar panels are introduced, capable of capturing sunlight from both sides, enhancing energy yield by utilizing reflected sunlight from surrounding surfaces."
- early_futuristic_renewables: "Ранняя футуристическая сверхпроводимость"
- early_futuristic_renewables_desc: "Cutting-edge control systems optimize wind turbine performance by adjusting blade pitch and yaw angles to extract maximum energy from varying wind conditions."
- futuristic_renewables: "Футуристическая сверхпроводимость"
- futuristic_renewables_desc: "Perovskite solar cells become commercially viable, offering higher efficiency and lower production costs, further driving the adoption of solar energy."
+ early_renewables: "Базовые солнечные панели"
+ early_renewables_desc: "Разработка базовых солнечных панелей позволит стране использовать солнечный свет и преобразовывать его в электричество, что станет первым шагом на пути к внедрению возобновляемых источников энергии."
+ renewables: "Достижения в области ветряных турбин"
+ renewables_desc: "Технологические улучшения в аэродинамике и материалах позволяют создавать более эффективные ветряные турбины, увеличивая их возможности по производству электроэнергии."
+ improved_renewables: "Высокоэффективная фотоэлектрическая система"
+ improved_renewables_desc: "Значительные достижения в технологии фотоэлектрических элементов приводят к более высоким показателям преобразования солнечной энергии, что делает солнечные панели более производительными и экономически эффективными."
+ advanced_renewables: "Композитные лопасти ветряных турбин"
+ advanced_renewables_desc: "Используя легкие, но прочные композитные материалы, лопасти ветряных турбин становятся более эффективными и долговечными, улавливая больше энергии ветра."
+ modern_renewables: "Тонкопленочные солнечные панели"
+ modern_renewables_desc: "Появление тонкопленочных солнечных панелей произвело революцию в солнечной промышленности, предлагая гибкость и адаптируемость при установке, одновременно повышая общую эффективность."
+ improved_modern_renewables: "Морские ветряные электростанции"
+ improved_modern_renewables_desc: "Страны начинают строить ветряные электростанции в прибрежных районах, получая выгоду от более сильных и постоянных ветров, открывая путь для крупномасштабных ветроэнергетических проектов."
+ advanced_modern_renewables: "Двусторонние солнечные панели"
+ advanced_modern_renewables_desc: "Представлены двусторонние солнечные панели, способные улавливать солнечный свет с обеих сторон, повышая выработку энергии за счет использования отраженного солнечного света от окружающих поверхностей."
+ early_futuristic_renewables: "Расширенное управление ветряными турбинами"
+ early_futuristic_renewables_desc: "Передовые системы управления оптимизируют производительность ветряной турбины, регулируя угол наклона лопастей и угла отклонения от курса, чтобы извлечь максимальную энергию из различных ветровых условий."
+ futuristic_renewables: "Перовскитные солнечные батареи"
+ futuristic_renewables_desc: "Солнечные элементы на основе перовскита становятся коммерчески жизнеспособными, предлагая более высокую эффективность и более низкие производственные затраты, что способствует дальнейшему внедрению солнечной энергии."
  futuristic_oil_refining: "Футуристическая переработка топлива"
  futuristic_oil_refining_desc: "Дополнительные изменения в перегонке биодизеля и топлива общего назначения могут позволить нам получить больше топлива, которое будет гореть чище и эффективнее."
- fuel_efficiency: "Advanced Combustion Engineering"
- fuel_efficiency_desc: "Innovations in combustion engineering allow us to extract more energy from fossil fuels while reducing consumption, setting a precedent for the future of energy generation."
- fuel_efficiency2: "Integrated Gasification Combined Cycle"
- fuel_efficiency2_desc: "By converting coal and other carbon-based fuels into gas, we harness the potential of cleaner and more efficient energy production, marking a leap in our fossil fuel energy plants' capabilities."
- fuel_efficiency3: "High-Efficiency Low-Emissions Technologies"
- fuel_efficiency3_desc: "Embracing HELE technologies ensures our fossil fuel plants achieve higher efficiencies with lower emissions, marrying the twin goals of energy production and environmental protection."
- fuel_efficiency4: "Carbon Capture & Storage (CCS) Integration"
- fuel_efficiency4_desc: "As global concerns over carbon emissions grow, integrating CCS into our power plants allows us to trap and store CO2 emissions, making fossil fuel energy both potent and environmentally conscious."
- fuel_efficiency5: "AI-Driven Optimization & Monitoring"
- fuel_efficiency5_desc: "Harnessing the power of artificial intelligence, our plants now dynamically adjust operations in real-time, ensuring optimal fuel consumption and output while minimizing environmental impacts."
- fuel_efficiency6: "Near-Zero Emission Fossil Fuel Plants"
- fuel_efficiency6_desc: "Through cutting-edge technologies and techniques, our fossil fuel plants now operate with significantly reduced emissions, epitomizing the pinnacle of efficient energy production."
+ fuel_efficiency: "Передовая технология сжигания"
+ fuel_efficiency_desc: "Инновации в области техники сжигания позволяют нам извлекать больше энергии из ископаемого топлива при одновременном сокращении потребления, создавая прецедент для будущего производства энергии."
+ fuel_efficiency2: "Комплексный комбинированный цикл газификации"
+ fuel_efficiency2_desc: "Преобразуя уголь и другие углеродосодержащие виды топлива в газ, мы используем потенциал более чистого и эффективного производства энергии, что знаменует собой скачок в возможностях наших энергетических установок, работающих на ископаемом топливе.."
+ fuel_efficiency3: "Высокоэффективные технологии с низким уровнем выбросов"
+ fuel_efficiency3_desc: "Использование технологий HELE гарантирует, что наши заводы, работающие на ископаемом топливе, достигают более высокой эффективности при более низком уровне выбросов, объединяя двойную цель: производство энергии и защиту окружающей среды."
+ fuel_efficiency4: "Интеграция улавливания и хранения углерода (CCS)"
+ fuel_efficiency4_desc: "Поскольку глобальная обеспокоенность по поводу выбросов углекислого газа растет, интеграция CCS в наши электростанции позволяет нам улавливать и хранить выбросы CO2, делая энергетику на ископаемом топливе одновременно мощной и экологически безопасной."
+ fuel_efficiency5: "Оптимизация и мониторинг на основе искусственного интеллекта"
+ fuel_efficiency5_desc: "Используя возможности искусственного интеллекта, наши заводы теперь динамически корректируют работу в режиме реального времени, обеспечивая оптимальный расход топлива и производительность, одновременно сводя к минимуму воздействие на окружающую среду."
+ fuel_efficiency6: "Заводы по производству ископаемого топлива с почти нулевым уровнем выбросов"
+ fuel_efficiency6_desc: "Благодаря передовым технологиям и технологиям наши заводы, работающие на ископаемом топливе, теперь работают со значительно сниженными выбросами, олицетворяя вершину эффективного производства энергии."
  energy_efficiency: "Основы термодинамики"
- energy_efficiency_desc: "Применяя некоторые фундаментальные основы термодинамики, можно сразу же сократить потери энергии на предприятиях и в офисных зданиях."
+ energy_efficiency_desc: "Применяя некоторые фундаментальные основы термодинамических принципов, потери энергии на заводах и в офисных зданиях могут быть немедленно сокращены."
  energy_efficiency2: "Применение тепловой изоляции"
- energy_efficiency2_desc: "Значительная часть затрат на электроэнергию в стране приходится на отопление и охлаждение зданий. Применение тепловой изоляции позволяет снизить эти расходы, а полученную энергию использовать в других местах."
- energy_efficiency3: "Расширенная интеграция систем управления"
- energy_efficiency3_desc: "Интегрировав некоторые элементарные алгоритмы в термостаты и системы управления, можно еще больше повысить эффективность, что позволит дополнительно сэкономить электроэнергию."
- energy_efficiency4: "Изоляция высокой плотности"
- energy_efficiency4_desc: "Использование более современных материалов позволяет повысить плотность изоляции и добиться еще большего энергосбережения."
- energy_efficiency5: "Электростанции с ТЭГ-улучшением"
- energy_efficiency5_desc: "Многие современные энергетические установки по-прежнему используют тепло для превращения воды в пар. Хотя с годами этот метод стал более эффективным, он по-прежнему приводит к выделению большого количества тепла. Термоэлектрические генераторы можно использовать гибко, извлекая из отработанного тепла дополнительное напряжение. Это отражается на снижении общих затрат заводов на топливо."
+ energy_efficiency2_desc: "Большая часть национальных затрат на электроэнергию приходится на отопление и охлаждение зданий. Использование тепловой изоляции может сократить эти расходы, позволяя использовать полученную энергию в другом месте."
+ energy_efficiency3: "Расширенная интеграция управления"
+ energy_efficiency3_desc: "Интегрируя некоторые элементарные алгоритмы в термостаты и системы управления, можно еще больше повысить эффективность, что позволит добиться некоторой дополнительной экономии энергии."
+ energy_efficiency4: "Высокая плотность изоляции"
+ energy_efficiency4_desc: "Используя более современные материалы, можно увеличить плотность изоляции и добиться еще большей экономии энергии."
+ energy_efficiency5: "Модернизированные ТЭГ"
+ energy_efficiency5_desc: "Многие современные электростанции по-прежнему используют тепло для превращения воды в пар. Хотя с годами этот метод стал более эффективным, он по-прежнему производит большое количество отходящего тепла. Термоэлектрические генераторы можно гибко использовать для извлечения дополнительного напряжения из отходящего тепла. Это отражается на снижении общих затрат заводов на топливо."
  energy_efficiency6: "Изоляторы из нановолокна"
- energy_efficiency6_desc: "Последние разработки в области технологии нановолокон позволяют использовать одну из самых совершенных и плотных на сегодняшний день изоляций. Это позволит серьезно повысить энергоэффективность."
+ energy_efficiency6_desc: "Последние разработки в области технологии нановолокон позволяют использовать одни из самых передовых и плотных изоляционных материалов на сегодняшний день. Это серьезно повысит энергоэффективность."
  energy_efficiency7: "Крупномасштабная интеграция ТЭГ"
- energy_efficiency7_desc: "Термоэлектрические генераторы могут использоваться не только для изоляции заводов и офисов, но и для рекуперации энергии, которая в противном случае была бы потеряна даже при самой современной теплоизоляции."
+ energy_efficiency7_desc: "Помимо простой изоляции заводов и офисов, термоэлектрические генераторы можно использовать для восстановления энергии, которая в противном случае была бы потеряна даже при самой современной тепловой изоляции."
  energy_efficiency8: "Микрогенераторы"
- energy_efficiency8_desc: "Оснащение выхлопных труб небольшими генераторными турбинами и прокладка термоэлектрической проводки через окна выводит утилизацию энергии на новый уровень."
- energy_efficiency9: "Сверхпроводящие ТЭГи"
- energy_efficiency9_desc: "Использование экстремальных температур и физических свойств эффекта Зеебека - это одно, но сочетание его со сверхпроводящими свойствами некоторых недавно разработанных сплавов и нановолоконной технологией позволяет достаточно близко подойти к концепции нулевых потерь."
+ energy_efficiency8_desc: "Оснащение выхлопных газов небольшими генераторными турбинами и прокладка термоэлектрической проводки через окна выводят рекуперацию энергии на новый уровень."
+ energy_efficiency9: "Сверхпроводящие ТЭГ"
+ energy_efficiency9_desc: "Использование экстремальных температур и физических свойств эффекта Зеебека — это одно, но сочетание его со сверхпроводящими свойствами некоторых недавно разработанных сплавов и технологии нановолокон позволяет довольно близко приблизить эффективность к концепции нулевых потерь."
 
  # GUI:
  TOTAL_GENERATION_ENERGY: "§HОбщая генерация§!: [?energy_sum|G2] ГВт"
@@ -157,27 +158,27 @@
 
  energy.4.t: "Новый обогатительный комплекс"
  energy.4.d: "[FROM.GetNameWithFlag] в настоящее время строит свой первый обогатительный комплекс. Как мы должны действовать? Мы можем потребовать, чтобы они прекратили строительство."
- energy.4.a: "Потребовать прекращения"
+ energy.4.a: "Требуйте, чтобы они прекратили"
  energy.4.b: "Разрешить строительство"
 
- energy.5.t: "Прекратищение строительства обогатительного комплекса"
- energy.5.d: "От [FROM.GetName] нам поступило предложение остановить строительство нашего обогатительного предприятия. Должны ли мы остановить строительство? Мы можем также ограничиться материалами НОУ после строительства, чтобы иметь возможность производить собственное ядерное топливо, или просто игнорировать их. Кто знает?"
+ energy.5.t: "Прекращение строительства обогатительной фабрики"
+ energy.5.d: "От [FROM.GetName] попросил нас остановить строительство нашего обогатительного завода. Должны ли мы остановить строительство? Мы также можем ограничиться материалами НОУ, как только они будут созданы, чтобы позволить нам производить собственное ядерное топливо, или мы можем просто игнорировать их. Кто знает?"
  energy.5.a: "Прекратить строительство"
- energy.5.b: "Ограничение на НОУ"
+ energy.5.b: "ограничиться на НОУ"
  energy.5.c: "Игнорировать требования"
 
  energy.6.t: "[FROM.GetNameWithFlag] принимает наши требования"
  energy.6.d: "Они приняли наши требования и прекратили строительство."
  energy.6.a: "Отлично"
 
- energy.7.t: "[FROM.GetNameWithFlag] ограничения на материалы реакторного класса"
+ energy.7.t: "[FROM.GetNameWithFlag] ограничиваются на материалах реакторного класса"
  energy.7.d: "Они ограничили себя в использовании материалов реакторного класса. Это должно помешать им стать полноценной ядерной державой."
  energy.7.a: "Достойное начинание"
 
  energy.8.t: "[FROM.GetNameWithFlag] игнорирует наши требования"
- energy.8.d: "Нам сказали, что нужно есть давление."
+ energy.8.d: "Они сказали нам, чтобы мы не использовали давление на них."
  energy.8.a: "Спасибо"
 
  energy.9.t: "[FROM.GetNameWithFlag] разрешила строительство"
- energy.9.d: "Они нам разрешили и спонсируют наше строительство. Нас не должна останавливать никакая другая власть."
+ energy.9.d: "Они нам разрешили и спонсируют наше строительство. Нас не должна останавливать никакая другая сила."
  energy.9.a: "Спасибо"
