--- a/localisation/russian/MD_focus_ITA_l_russian.yml
+++ b/localisation/russian/MD_focus_ITA_l_russian.yml
@@ -577,8 +577,6 @@ ITA_privatize_museum_system_decision: "Приватизация музеи"
  ITA_anti_mafia_education_desc: "Чтобы победить мафию, мы должны гарантировать, что наши дети не вырастут, чтобы быть завербованными в их ряды. Мы должны обеспечить, чтобы школы предоставляли им безопасное место для роста, вдали от махинаций Семей."
  ITA_protect_against_pizzo: "Предложение защиты от Пиццо"
  ITA_protect_against_pizzo_desc: "§tМафия§! осуществляет контроль над территорией посредством де-факто налогообложения под названием "Пиццо" - неоспоримой платы, предлагаемой в обмен на защиту. Отказ платить за эту защиту часто становится причиной неприятных инцидентов в коммерческой деятельности тех, кто отказывается от поборов."
- ITA_deal_with_mafia: "Сделка с мафией"
- ITA_deal_with_mafia_desc: "Мафия слишком укоренилась в нашем обществе, чтобы разумно ее устранить, мы должны принять этот факт и бороться с ними, чтобы сохранить управляемость страной."
  ITA_eradicating_mafia: "Искоренение мафии"
  ITA_eradicating_mafia_desc: "Одна из самых больших проблем, мешающих нам развивать Юг, - это организованная преступность, известная как мафия. Существуют различные преступные организации, контролирующие южную Италию почти феодальным образом, и они стали неотъемлемой частью общества. Избавиться от них будет нелегко, но это правильно."
  ITA_North_South_divide: "Южный вопрос"
@@ -1982,15 +1980,6 @@ ITA_privatize_museum_system_decision: "Приватизация музеи"
  modify_transport_capacity_TT: "§YТребование к конвою войск§!: [?ITA_transport_capacity_change|%-]\n"
  modify_agricolture_productivity_modifier_effect_TT: "§YAgriculture Productivity§!: [?ITA_agricolture_productivity_modifier_change|%+]\n"
 
- #opinion modifiers
- lateran_treaties_accepted: "Латеранские договоры"
- lateran_treaties_refused: "Отказ от Латеранских договоров"
- denied_investment_request: "Отказано в инвестиционном запросе"
- accepted_investment_request: "Принят в инвестиционном запросе"
- outrageous_demands: "Возмутительные требования"
- refused_to_be_annexed: "Отказался от аннексии"
- ITA_refused_oil_investments_africa: "Отказался от нефтяных африканских инвестиций"
-
  #dynamic modifiers
  ITA_civil_war_partisan_activity: "Партизанская деятельность"
  ITA_civil_war_partisan_activity_TT: "Как и ожидалось от такого раскольнического конфликта, значительная часть гражданского населения, не принимая непосредственного участия в боевых действиях, предоставляет разведданные, снабжение, убежище и защиту солдатам той стороны, которой она симпатизирует."
@@ -2110,8 +2099,6 @@ ITA_privatize_museum_system_decision: "Приватизация музеи"
  ITA_peaceful_takeovers_desc: "История показала, что одной военной мощи недостаточно, чтобы объединить Европу, чтобы вернуть наши земли, мы должны использовать новый метод."
  ITA_mafia: "Мафия"
  ITA_mafia_desc: "Организованная преступность и криминальные кланы - огромная проблема в Италии. Особенно на юге страны местные предприятия подвергаются угрозам и давлению со стороны мафии, которая также подкупает чиновников, угрожает полиции и прокурорам, которые пытаются выследить преступников."
- ITA_north_miracle_industry: "Североитальянская промышленность"
- ITA_north_miracle_industry_desc: "Быстрое расширение промышленного комплекса в Северной Италии после войны привело к Итальянскому экономическому чуду, которое превратило ее из бедной, в основном сельской, страны в крупную промышленную державу."
  ITA_parliament_dismantled: "Парламент распущен"
  ITA_parliament_dismantled_desc: "Исполнительная власть захватила власть и распустила парламент в то время как страна завершает переход к новому режиму."
  ITA_kingdom_restored: "Реставрация Савойской династии"
@@ -2576,3 +2563,7 @@ ITA_privatize_museum_system_decision: "Приватизация музеи"
  ITA_tech_deal: "Техническая сделка"
  ITA_restart_otomatic_development: "Перезапуск разработки OTOMATIC"
  ITA_restart_otomatic_development_desc: "Перезапуск разработки OTOMATIC"
+ ITA_modify_education_cost_multiplier_modifier_effect_TT: "§YРасходы на образование§!: [?ITA_education_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_health_cost_multiplier_modifier_effect_TT: "§YРасходы на здравоохранение§!: [?ITA_health_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§YРасходы на бюрократию§!: [?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
+ ITA_modify_police_cost_multiplier_modifier_effect_TT: "§YРасходы на полицию§! [?ITA_police_cost_multiplier_modifier_change|%-]\n"
