--- a/localisation/russian/MD_frontend_l_russian.yml
+++ b/localisation/russian/MD_frontend_l_russian.yml
@@ -90,10 +90,10 @@
  custom_diff_weak_geo: "@GEO Ослабить Грузию"
  custom_diff_weak_abk: "@ABK Ослабить Абхазию"
 
- VERSION_MD: "Millennium Dawn: A Modern Day v1.9.6"
- VERSION_MD_DATE: "Дата выхода: 21 марта 2024, 4:30 МСК"
- MENU_MD_WIKI: "Найдите полезную информацию касательно мода на Gitlab Wiki!"
+ VERSION_MD: "Millennium Dawn: A Modern Day v1.10.1"
+ VERSION_MD_DATE: "Дата выхода: 14 июня 2024, 3:30 МСК"
+ MENU_MD_WIKI: "Найдите полезную информацию о Millennium Dawn: A Modern Day на Gitlab Wiki!"
  MENU_STEAMWORKSHOP: "Оставьте свой рейтинг моду на странице в Steam Workshop!"
- MENU_DISCORD: "Найдите других игроков и пообщайтесь с разработчиками в Discord!"
+ MENU_DISCORD: "Найдите других игроков и пообщайтесь с разработчиками в Discord"
  MENU_VKONTAKTE: "Официальная группа ВКонтакте. Переводы дневников, эксклюзивные тизеры и мемы про мод."
  MENU_REDDIT: "Обсудите дневники разработчиков с другими людьми на Reddit!"
