--- a/localisation/russian/MD_opinion_modifiers_l_russian.yml
+++ b/localisation/russian/MD_opinion_modifiers_l_russian.yml
@@ -254,6 +254,8 @@
  europe_russia_economic_deals: "Российско-европейские экономические сделки"
  enemy_number_one: "Враг номер 1"
  ideological_enemy: "Идеологические враги"
+ union_stated: "Интеграция Союзного государства"
+ bad_revoult: "Неудавшийся переворот"
 
  #Iran
  uss_vincennes: "Сбил наш гражданский самолет в 1988 году"
