--- a/localisation/russian/MD_pmc_l_russian.yml
+++ b/localisation/russian/MD_pmc_l_russian.yml
@@ -89,7 +89,7 @@
  call_pmc_back_sov: "Отозвать подразделения"
  call_pmc_back_sov_desc: "Это позволит нам вернуть своих парней домой, но нам придется оплатить компенсацию за досрочное прерывание контракта."
  pmc_category: "Частные военные компании"
- pmc_category_desc: "\n\n\n\n\n\n£CHVK_desctext_pmc\n\n\n\n\n\n\n\n\n§YЧастные военные компании§!.\n\n§GАрендуйте§! свою собственную §Yчастную армию!§!\n§YКомпании§!, §Gлояльные§! к нам, или те, которые мы контролируем напрямую, предоставят нам §Y20%§! §Gскидки§! на свои услуги.\n\n[PMC_max_available]\n§YТекущий список ЧВК§!:\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
+ pmc_category_tracker_desc: "§YЧастные военные компании§!.\n\n§GАрендуйте§! свою собственную §Yчастную армию!§!\n§YКомпании§!, §Gлояльные§! к нам, или те, которые мы контролируем напрямую, предоставят нам §Y20%§! §Gскидки§! на свои услуги.\n\n[PMC_max_available]\n§YТекущий список ЧВК§!:\n[PMC_Header_blackwater][PMC_Header_wagner][PMC_Header_aegis][PMC_Header_constellis][PMC_Header_md]"
  pmc_local_management: "Местные военные компании"
  pmc_local_management_desc: "Местные военные компании. Местные компании всегда дают скидку 20%.\nМы можем расширить лимит до 7. Мы можем увеличить качество до 4.\n\n[PMC_max_available]\n[PMC_local_header]"
  form_local_pmc: "Сформировать местное ЧВК"
@@ -173,10 +173,15 @@
  pmc_dewe: "Нанять бригаду ЧВК §YDewe Security Services§!"
  pmc_over: "Нанять специалистов по кибербезопасности и обучению §YChina Overseas Group Security§!"
  pmc_front: "Нанять специалистов по безопасности §YFrontier Services Group§!"
- pmc_redut: "Нанять бригаду ЧВК §YRedut§!"
- pmc_gazprom: "Нанять бригаду ЧВК §YRedut§!"
+ pmc_redut: "Нанять бригаду ЧВК §YРедут§!"
+ pmc_gazprom: "Нанять бригаду ЧВК §YРедут§!"
  pmc_iron: "Нанять бригаду ЧВК §YIron Navy§!"
  pmc_eu: "Нанять §YEuropean Security Academy§! специализирующуюся на подготовке спецназа"
+ pmc_sheriff: "Нанять бригаду ЧВК §YШериф§! PMCs Brigade"
+ pmc_lukoil: "Нанять бригаду ЧВК §YЛукойл§! PMCs Brigade"
+ pmc_rosneft: "Нанять бригаду ЧВК §YРоснефть§! PMCs Brigade"
+ pmc_sberbank: "Нанять бригаду ЧВК §YСбер§! PMCs Brigade"
+ pmc_vtb: "Нанять бригаду ЧВК §YВТБ§! PMCs Brigade"
 
  pmc_asgard_TT: "Услуги §Y@GER ЧВК Asgaard§! в настоящий момент не §Gиспользуются§!."
  pmc_mpri_TT: "Услуги §Y@USA ЧВК MPRI§! в настоящий момент не §Gиспользуются§!."
@@ -199,6 +204,11 @@
  pmc_gazprom_TT: "Услуги §Y@SOV ЧВК Gazprom§! в настоящий момент не §Gиспользуются§!."
  pmc_iron_TT: "Услуги §Y@EST ЧВК Iron Navy§! в настоящий момент не §Gиспользуются§!."
  pmc_eu_TT: "Услуги §Y@POL ЧВК European Security Academy§! в настоящий момент не §Gиспользуются§!."
+ pmc_sheriff_TT: "Услуги §Y@PMR ЧВК Шериф§! в настоящий момент не §Gиспользуются§!."
+ pmc_lukoil_TT: "Услуги §Y@SOV ЧВК Лукойл§! в настоящий момент не §Gиспользуются§!."
+ pmc_rosneft_TT: "Услуги §Y@SOV ЧВК Роснефть§! в настоящий момент не §Gиспользуются§!."
+ pmc_sberbank_TT: "Услуги §Y@SOV ЧВК Сбер§! в настоящий момент не §Gиспользуются§!."
+ pmc_vtb_TT: "Услуги §Y@SOV ЧВК ВТБ§! в настоящий момент не §Gиспользуются§!."
 
  pmc_asgard_idea: "§0ЧВК§! Asgaard"
  pmc_mrpi_idea: "§0ЧВК§! MPRI"
@@ -211,8 +221,12 @@
  pmc_dci_idea: "§0ЧВК§! Défense Conseil International"
  pmc_over_idea: "§0ЧВК§! China Overseas Group Security"
  pmc_front_idea: "§0ЧВК§! Frontier Services Group"
- pmc_gazprom_idea: "§0ЧВК§! Gazprom"
+ pmc_gazprom_idea: "§0ЧВК§! Газпром"
  pmc_eu_idea: "§0ЧВК§! European Security Academy"
+ pmc_lukoil_idea: "§0ЧВК§! Лукойл"
+ pmc_rosneft_idea: "§0ЧВК§! Роснефть"
+ pmc_sberbank_idea: "§0ЧВК§! Сбер"
+ pmc_vtb_idea: "§0ЧВК§! ВТБ"
 
  open_other: "Открыть подразделения §Yдругих ЧВК§!"
  close_other: "Закрыть подразделения §Yдругих ЧВК§!"
@@ -224,9 +238,16 @@
  pmc_over_create: "Создать собственную ЧВК - §YЧВК China Overseas Group Security§!."
  pmc_front_create: "Создать собственную ЧВК - §YЧВК Frontier Services Group§!."
  pmc_iron_create: "Создать собственную ЧВК - §YЧВК Iron Navy§!."
+ pmc_sheriff_create: "Создать собственную ЧВК - §YЧВК Шериф§!."
+
  
- pmc_redut_create_TT: "Create our own PMCs - §YRedut PMCs§!."
- pmc_gazrpom_create_TT: "Create our own PMCs - §YGazprom PMCs§!."
+ pmc_redut_create_TT: "Создать собственную ЧВК - §YЧВК Редут§!."
+ pmc_gazrpom_create_TT: "Создать собственную ЧВК - §YЧВК Газпром§!."
+ pmc_sheriff_create_TT: "Создать собственную ЧВК - §YЧВК Шериф§!."
+ pmc_lukoil_create_TT: "Создать собственную ЧВК - §YЧВК Лукойл§!."
+ pmc_rosneft_create_TT: "Создать собственную ЧВК - §YЧВК Роснефть§!."
+ pmc_sberbank_create_TT: "Создать собственную ЧВК - §YЧВК Сбер§!."
+ pmc_vtb_create_TT: "Создать собственную ЧВК - §YЧВК ВТБ§!."
 
  pmc_events.1.t: "[From.GetNameDef] отзывает своих наемников"
  pmc_events.1.d: "Одно из наших подразделений наемников было отозвано [From.GetNameDef] из-за приказа их владельца, они выплатят нам компенсацию за преждевременный разрыв контракта и на этом закончат свою службу."
