--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -67,8 +67,7 @@
  cuba.16.t: "Pope's visit to Cuba"
  cuba.16.d: "Today, the Pope arrived on an official visit to the island of freedom. Cuba, which has practiced state atheism since '62, is now allowed to celebrate Christmas for the first time. In an event that has been compared to the fall of the Berlin Wall, the Pope is visiting Cuba, the only country in all-Catholic Latin America that he has never visited before."
  cuba.16.a: "The latest echo of the Cold War in Cuba ..."
- cuba.10: "The New Cuban Constitution"
- cuba_castro.10.t: "The New Cuban Constitution"
+ cuba.10.t: "The New Cuban Constitution"
  cuba.10.d: "Today, the Cuban government officially announced the adoption of the country's new constitution. According to the authorities, the new constitution is fully in line with the will of the island's citizens"
  cuba.10.a: "Finally, normal constitution"
  cuba.17: "Cuba is offering us an alliance"
@@ -291,9 +290,7 @@
  CUB_trade_with_CAN: "Development of Trade with Canada"
  CUB_trade_with_MEX: "Sign a Free Trade Agreement with Mexico"
  CUB_dolg_with_MEX: "Ask Mexico to cancel the debt"
- CUB_blockadea_tt: "§tDecreases the level of blockade effect on our economy by 5%§!"
  CUB_blockade_tt: "§GUnlocks §HFighting Against the Blockade§! Decisions§!"
- cant_start1_tt: "Hasn't been recently used"
  CUB_alba_healthcare: "§YALBA Projects§! : Healthcare"
  CUB_alba_schools:  "§YALBA Projects§! : School of Defense and Sovereignty"
  CUB_alba_petrosur:  "§YALBA Projects§! : PETROSUR"
@@ -327,7 +324,7 @@
  CUB_castros_new_idea: "Castro's New Ideas"
  CUB_rauls_four_reforms: "Economic Actualisation Programme"
  CUB_idea_migration_crisis: "Illegal Migration"
- CUB_idea_migration_crisis_desc: "Migration, has become a big problem for our country. Every day hundreds of professionals leave our country illegally in search of a better life. You can remove this national spirit by doing the "Combating Illegal Migration" focus."
+ CUB_idea_migration_crisis_desc: "Migration, has become a big problem for our country. Every day hundreds of professionals leave our country illegally in search of a better life. You can remove this national spirit by doing the "Fight with Illegal Migration" focus."
  CUB_land_of_freedom_idea: "Island of freedom"
  CUB_land_of_freedom_idea_desc: "Cuba has fought for its freedom for centuries, and now that we are a truly free country, we will not let anyone take away our independence!"
  CUB_idea_blockade1: "The Blockade (El Bloqueo) Against Cuba"
@@ -975,7 +972,7 @@
  CUB_invest_hub_desc: "Now our country is one of the most attractive for investors, with the help of which we can improve our country."
  CUB_infr_development: "Start Developing Infrastructure"
  CUB_infr_development_desc: "With the funds available, we can begin to modernize our infrastructure, which is already outdated."
- CUB_invest_habanna: "Invest in Habana"
+ CUB_invest_habanna: "Invest in Havana"
  CUB_invest_habanna_desc: "Havana is the Cuban capital, the architecture is in bad shape, we need to get serious about this problem."
  CUB_invest_camaguey: "Invest in Camagüey"
  CUB_invest_camaguey_desc: "Camagüey is a major city in Cuba. Due to the crisis of the 1990s, its infrastructure was destroyed. Now we have to rebuild it."
@@ -1025,10 +1022,8 @@
  CUB_trade_with_chi_desc: "China is an emerging technological power, we need to strengthen our relationship, to gain access to modern technology."
  CUB_enter_brics: "Enter BRICS"
  CUB_enter_brics_desc: "BRICS - interstate association, union organization (commonwealth of states) was founded in June 2006 (as BRIC), in the framework of the St. Petersburg Economic Forum with the participation of economic ministers of Brazil, Russia, India, and China."
- CUB_demand_from_us: "Call for the lifting of  Blockade"
+ CUB_demand_from_us: "Call for the lifting of Blockade"
  CUB_demand_from_us_desc: "Now that we have many allies in the world, we can demand that the blockade of the American aggressor be lifted."
- CUB_compensation_from_us: "Demand Compensation From USA"
- CUB_compensation_from_us_desc: "For several decades of the blockade, our country has suffered huge losses, we have every right to demand compensation from the u.s."
  CUB_MERCOSUR: "Ties with MERCOSUR"
  CUB_MERCOSUR_desc: "The Southern Common Market, commonly known by the Spanish abbreviation Mercosur, and Portuguese Mercosul, is a South American trade bloc established by the Treaty of Asunción in 1991 and Protocol of Ouro Preto in 1994. Its full members are Argentina, Brazil, Paraguay and Uruguay."
  CUB_operation_miracle: "Start Operation Miracle"
