--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2689,6 +2689,7 @@
  VICTORY_POINTS_3717: "Maykop"
  VICTORY_POINTS_11668: "Novorossiysk"
  VICTORY_POINTS_735: "Armvir"
+ VICTORY_POINTS_6768: "Vyselki"
  VICTORY_POINTS_6783: "Yeysk"
  VICTORY_POINTS_3698: "Tuapse"
  VICTORY_POINTS_11729: "Slavyansk"
