--- a/localisation/french/victory_points_l_french.yml
+++ b/localisation/french/victory_points_l_french.yml
@@ -4415,3 +4415,4 @@
  VICTORY_POINTS_12328: "Yazoo City"
  VICTORY_POINTS_8110: "Bogue Chitto"
  VICTORY_POINTS_9345: "Ndele"
+ VICTORY_POINTS_6768: "Vyselki"
