--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -54,7 +54,7 @@
  cuba.16.t: "教宗访问古巴"
  cuba.16.d: "今天，教皇抵达自由之岛进行正式访问。自62年以来一直实行国家无神论的古巴现在首次被允许庆祝圣诞节。在一场可与柏林墙倒塌相比较的事件中，教皇正在访问古巴，这个全天主教拉丁美洲国家中他唯一从未访问过的国家。"
  cuba.16.a: "冷战在古巴的最后回响…"
- cuba.10: "古巴新宪法"
+ cuba.10.t: "古巴新宪法"
  cuba_castro.10.t: "古巴新宪法"
  cuba.10.d: "今天，古巴政府正式宣布通过新国家宪法。据当局表示，新宪法完全符合岛民意愿。"
  cuba.10.a: "终于，一部正常的宪法。"
